--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <groupId>org.beangle</groupId>
     <artifactId>beangle-scala</artifactId>
-    <version>24.9</version>
+    <version>24.10</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.beangle.repo</groupId>
@@ -13,9 +13,9 @@
   <version>0.0.4-SNAPSHOT</version>
 
   <properties>
-    <beangle.commons.version>5.1.0.M3</beangle.commons.version>
-    <beangle.mvc.version>0.3.17</beangle.mvc.version>
-    <beangle.cdi.version>0.0.15</beangle.cdi.version>
+    <beangle.commons.version>5.1.0</beangle.commons.version>
+    <beangle.mvc.version>0.3.18</beangle.mvc.version>
+    <beangle.cdi.version>0.0.16</beangle.cdi.version>
   </properties>
 
   <description>
