--- a/artifact/pom.xml
+++ b/artifact/pom.xml
@@ -20,11 +20,11 @@
     Beangle Repository Artifact
   </description>
 
-    <dependencies>
-        <dependency>
-            <groupId>org.apache.commons</groupId>
-            <artifactId>commons-compress</artifactId>
-            <version>1.15</version>
-        </dependency>
-    </dependencies>
+  <dependencies>
+    <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-compress</artifactId>
+       <version>${commons.compress.version}</version>
+    </dependency>
+  </dependencies>
 </project>
