--- a/pom.xml
+++ b/pom.xml
@@ -10,11 +10,11 @@
   <artifactId>beangle-repo-parent</artifactId>
   <packaging>pom</packaging>
   <name>Beangle Repository Toolkit</name>
-  <version>0.0.11-SNAPSHOT</version>
+  <version>0.0.11</version>
 
   <properties>
-    <beangle.commons.version>5.1.5</beangle.commons.version>
-    <beangle.mvc.version>0.3.25</beangle.mvc.version>
+    <beangle.commons.version>5.1.7</beangle.commons.version>
+    <beangle.mvc.version>0.3.28</beangle.mvc.version>
     <beangle.cdi.version>0.0.18</beangle.cdi.version>
     <commons.compress.version>1.18</commons.compress.version>
   </properties>
