--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <groupId>org.beangle</groupId>
     <artifactId>beangle-scala</artifactId>
-    <version>25.2</version>
+    <version>26.0-SNAPSHOT</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.beangle.repo</groupId>
@@ -13,9 +13,9 @@
   <version>0.0.12-SNAPSHOT</version>
 
   <properties>
-    <beangle.commons.version>5.1.7</beangle.commons.version>
-    <beangle.mvc.version>0.3.28</beangle.mvc.version>
-    <beangle.cdi.version>0.0.18</beangle.cdi.version>
+    <beangle.commons.version>5.1.8-SNAPSHOT</beangle.commons.version>
+    <beangle.mvc.version>0.3.30-SNAPSHOT</beangle.mvc.version>
+    <beangle.cdi.version>0.1.0-SNAPSHOT</beangle.cdi.version>
     <commons.compress.version>1.18</commons.compress.version>
   </properties>
 
@@ -31,12 +31,12 @@
   <dependencies>
     <dependency>
       <groupId>org.beangle.commons</groupId>
-      <artifactId>beangle-commons-core_2.12</artifactId>
+      <artifactId>beangle-commons-core_2.13</artifactId>
       <version>${beangle.commons.version}</version>
     </dependency>
     <dependency>
       <groupId>org.beangle.commons</groupId>
-      <artifactId>beangle-commons-file_2.12</artifactId>
+      <artifactId>beangle-commons-file_2.13</artifactId>
       <version>${beangle.commons.version}</version>
     </dependency>
   </dependencies>
