--- a/artifact/pom.xml
+++ b/artifact/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <groupId>org.beangle.repo</groupId>
     <artifactId>beangle-repo-parent</artifactId>
-    <version>0.0.13</version>
+    <version>0.0.14-SNAPSHOT</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.beangle.repo</groupId>
