--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
   <artifactId>beangle-repo-parent</artifactId>
   <packaging>pom</packaging>
   <name>Beangle Repository Toolkit</name>
-  <version>0.0.14-SNAPSHOT</version>
+  <version>0.0.14</version>
 
   <properties>
     <beangle.commons.version>5.1.11</beangle.commons.version>
