--- a/.editorconfig
+++ b/.editorconfig
@@ -3,14 +3,11 @@ root = true
 [*]
 end_of_line = lf
 insert_final_newline = true
-trim_trailing_whitespace =true
+trim_trailing_whitespace = true
 tab_width = 2
 
-[*.{js,scala,java,html,md,css,xml,ftl}]
+[*.{js,scala,java,html,md,css,xml,ftl,json}]
 charset = utf-8
-
-# space indentation
-[*.{scala,java,js,json,xml,ftl}]
 indent_style = space
 indent_size = 2
 
